5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1764_672.log
== TEST (2019-05-21 17:00:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
n= int(input("Insira um numero:"))
v= ones(n, dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    v= ones(n, dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:00:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= int(input("Insira um numero:"))
v= ones(n, dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= int(input("Insira um numero:"))
v= ones(n, dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= int(input("Insira um numero:"))
v= ones(n, dtype=int)

print(v)
-- EXECUTION TIME:
0.466601
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
